--- a/index.html
+++ b/index.html
@@ -16,27 +16,25 @@
 
 <body>
 
-<header class="flex justify-content-space-between">
- <img class="alohalogo alohalogo-mobile "  src="assets/images/aloha-logo.svg"/>
-<div class="floatright flex justify-content-flex-end floatright-mobile ">
-   <ul class=" flex playfairdisplay floatright align-items-center justify-content-space-around
-    flex-direction-column-mobile floatright-mobile ">
+<header>
+ <img src="assets/images/aloha-logo.svg"/>
+<div>
+   <ul class="playfairdisplay">
     <li> Home </li>
     <li> About </li>
     <li> Contact </li>
   </ul>
 
-  <img class="shoppingcartlogo shoppingcartlogo-mobile" src="assets/images/cart-icon.svg"/> </div>
+  <img src="assets/images/cart-icon.svg"/> </div>
 </header>
 
-<section class="banner flex align-items-center text-align-center flex-direction-column
-justify-content-center padding-top-bottom-medium banner-background-mobile">
+<section class="banner">
   <h4 class="color-white font-family-raleway fontshadow fontsize-med"> NEW COLLECTION</h4>
-  <h1 class="color-white playfairdisplay fontshadow bannerh1-mobile"> Spring/Summer 2016 </h1>
+  <h1 class="color-white playfairdisplay fontshadow"> Spring/Summer 2016 </h1>
 </section>
 
-<section class="companydescription text-align-center padding-top-bottom-medium">
-  <h3 class="padding-bottom-small playfairdisplay boldfont">
+<section class="companydescription">
+  <h3 class="playfairdisplay boldfont">
     <span class="italics_playfairdisplay">Hand-Crafted</span> Styles</h3>
   <p class="font-family-raleway fontsize-sm"> Aloha Apparel Co. sells only the
     finest ready-to-travel clothing. Browse our </p>
@@ -44,11 +42,10 @@ justify-content-center padding-top-bottom-medium banner-background-mobile">
     sign-up for updates below. </p>
 </section>
 
-<section class="products text-align-center padding-top-bottom-medium ">
-   <h3 class="padding-bottom-small playfairdisplay boldfont">
+<section class="products">
+   <h3 class="playfairdisplay boldfont">
      <span class="italics_playfairdisplay">Most-Loved </span> Products </h3>
-  <div class="items flex text-align-center font-family-raleway greyfont justify-content-space-around
-  flex-direction-column-mobile">
+  <div class="items flex font-family-raleway greyfont">
       <ul>
         <li><img src="assets/images/stretch-knit-dress.jpg"/> </li>
         <li> DRESSES</li>
@@ -79,11 +76,10 @@ justify-content-center padding-top-bottom-medium banner-background-mobile">
   </div>
 </section>
 
-<section class="email flex text-align-center color-white justify-content-center
-padding-top-bottom-medium flex-direction-column email-background-mobile">
+<section class="email color-white">
 
-  <div class="text-email-section padding-bottom-small">
-    <h3 class=" playfairdisplay padding-top-bottom-small fontshadow boldfont">
+  <div class="text-email-section ">
+    <h3 class=" playfairdisplay fontshadow boldfont">
       <span class="italics_playfairdisplay"> Sign-Up for</span> Updates </h3>
   <p class="font-family-raleway fontsize-sm"> Stay updated on our latest releases, be first
     to find out about upcoming</p>
@@ -91,8 +87,8 @@ padding-top-bottom-medium flex-direction-column email-background-mobile">
     Unsubscribe at any time </p>
   </div>
 
-<div class="emailform flex justify-content-center align-items-center ">
-  <form class="flex justify-content-center align-items-center " >
+<div class="emailform ">
+  <form>
     <input class="font-family-raleway flex  " type="text" name="emailaddress" placeholder="Your Email"> </input>
     <button class="color-white font-family-raleway email-button" type="submit"> Subscribe </button>
   </form>
@@ -101,24 +97,21 @@ padding-top-bottom-medium flex-direction-column email-background-mobile">
 
 
 
-<footer class="flex justify-content-space-between color-white padding-top-bottom-medium
- padding-left-small flex-direction-column-mobile justify-content-center-mobile ">
-<ul class="playfairdisplay text-align-center-mobile padding-bottom-50px-mobile " >
+<footer class="color-white ">
+<ul class="playfairdisplay" >
     <li>&copy; 2016 Aloha Apparel Co.</li>
-    <li class="padding-bottom-small"> Powered by HTML and CSS </li>
-    <li class="padding-bottom-small"> 604-604-6040 <a class="color-white"
-      href="sample.com"> info@alohaapparel.com </a> </li>
+    <li> Powered by HTML and CSS </li>
+    <li> 604-604-6040 <a class="color-white" href="sample.com"> info@alohaapparel.com </a> </li>
     <li class="greyfont">1490 W Broadway </li>
     <li class="greyfont"> Vancouver, BC, Canada </li>
 </ul>
 
-  <ul class=" SocialMedia padding-right-small font-family-raleway display-flex-mobile
-  justify-content-center-mobile padding-right-social-media-mobile  ">
+  <ul class=" SocialMedia font-family-raleway  ">
 
     <li>
     <a href="https://www.facebook.com/" class="flex">
       <div class="SocialMediaIcon"> <i class="fa fa-facebook" aria-hidden="true"></i></div>
-      <div class="color-white SocialMediaName hidden-mobile-text"> Facebook </div>
+      <div class="color-white SocialMediaName"> Facebook </div>
     </a>
     </li>
 
@@ -126,28 +119,28 @@ padding-top-bottom-medium flex-direction-column email-background-mobile">
     <li>
       <a href="https://twitter.com/" class="flex">
       <div class="SocialMediaIcon"> <i class="fa fa-twitter-square" aria-hidden="true"></i></div>
-      <div class="color-white SocialMediaName hidden-mobile-text"> Twitter </div>
+      <div class="color-white SocialMediaName"> Twitter </div>
       </a>
     </li>
 
     <li>
       <a href="https://www.instagram.com/?hl=en" class="flex">
       <div class="SocialMediaIcon"> <i class="fa fa-instagram" aria-hidden="true"></i></div>
-      <div class="color-white SocialMediaName hidden-mobile-text"> Instagram </div>
+      <div class="color-white SocialMediaName"> Instagram </div>
     </a>
     </li>
 
     <li>
       <a href="https://www.pinterest.com/" class="flex">
       <div class="SocialMediaIcon"> <i class="fa fa-pinterest" aria-hidden="true"></i></div>
-      <div class="color-white SocialMediaName hidden-mobile-text"> Pinterest</div>
+      <div class="color-white SocialMediaName"> Pinterest</div>
     </a>
     </li>
 
     <li>
       <a href="https://plus.google.com/" class="flex">
       <div class="SocialMediaIcon"> <i class="fa fa-google-plus" aria-hidden="true"></i></div>
-      <div class="color-white SocialMediaName hidden-mobile-text"> Google+</div>
+      <div class="color-white SocialMediaName "> Google+</div>
     </a>
     </li>
 
