--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
 
 <body>
 
-<header>
- <img src="assets/images/aloha-logo.svg"/>
-<div>
-   <ul class="playfairdisplay">
+<header class="flex">
+ <img class="alohalogo" src="assets/images/aloha-logo.svg"/>
+<div class="flex flex-direction-column-reverse">
+   <ul class=" flex playfairdisplay justify-content-space-around text-align-center">
     <li> Home </li>
     <li> About </li>
     <li> Contact </li>
   </ul>
 
-  <img src="assets/images/cart-icon.svg"/> </div>
+  <img class="shoppingcartlogo" src="assets/images/cart-icon.svg"/> </div>
 </header>
 
-<section class="banner">
+<section class="banner text-align-center">
   <h4 class="color-white font-family-raleway fontshadow fontsize-med"> NEW COLLECTION</h4>
   <h1 class="color-white playfairdisplay fontshadow"> Spring/Summer 2016 </h1>
 </section>
 
-<section class="companydescription">
+<section class="companydescription text-align-center">
   <h3 class="playfairdisplay boldfont">
     <span class="italics_playfairdisplay">Hand-Crafted</span> Styles</h3>
   <p class="font-family-raleway fontsize-sm"> Aloha Apparel Co. sells only the
@@ -42,10 +42,10 @@
     sign-up for updates below. </p>
 </section>
 
-<section class="products">
+<section class="products text-align-center">
    <h3 class="playfairdisplay boldfont">
      <span class="italics_playfairdisplay">Most-Loved </span> Products </h3>
-  <div class="items flex font-family-raleway greyfont">
+  <div class="items font-family-raleway greyfont">
       <ul>
         <li><img src="assets/images/stretch-knit-dress.jpg"/> </li>
         <li> DRESSES</li>
@@ -76,9 +76,9 @@
   </div>
 </section>
 
-<section class="email color-white">
+<section class="email color-white text-align-center">
 
-  <div class="text-email-section ">
+  <div class="text-email-section text-align-center">
     <h3 class=" playfairdisplay fontshadow boldfont">
       <span class="italics_playfairdisplay"> Sign-Up for</span> Updates </h3>
   <p class="font-family-raleway fontsize-sm"> Stay updated on our latest releases, be first
@@ -87,7 +87,7 @@
     Unsubscribe at any time </p>
   </div>
 
-<div class="emailform ">
+<div class="emailform text-align-center">
   <form>
     <input class="font-family-raleway flex  " type="text" name="emailaddress" placeholder="Your Email"> </input>
     <button class="color-white font-family-raleway email-button" type="submit"> Subscribe </button>
@@ -97,7 +97,7 @@
 
 
 
-<footer class="color-white ">
+<footer class="color-white text-align-center">
 <ul class="playfairdisplay" >
     <li>&copy; 2016 Aloha Apparel Co.</li>
     <li> Powered by HTML and CSS </li>
@@ -106,12 +106,12 @@
     <li class="greyfont"> Vancouver, BC, Canada </li>
 </ul>
 
-  <ul class=" SocialMedia font-family-raleway  ">
+  <ul class=" SocialMedia flex font-family-raleway text-align-center justify-content-center">
 
     <li>
     <a href="https://www.facebook.com/" class="flex">
       <div class="SocialMediaIcon"> <i class="fa fa-facebook" aria-hidden="true"></i></div>
-      <div class="color-white SocialMediaName"> Facebook </div>
+      <!--<div class="color-white SocialMediaName"> Facebook </div>-->
     </a>
     </li>
 
@@ -119,28 +119,28 @@
     <li>
       <a href="https://twitter.com/" class="flex">
       <div class="SocialMediaIcon"> <i class="fa fa-twitter-square" aria-hidden="true"></i></div>
-      <div class="color-white SocialMediaName"> Twitter </div>
+      <!--<div class="color-white SocialMediaName"> Twitter </div>-->
       </a>
     </li>
 
     <li>
       <a href="https://www.instagram.com/?hl=en" class="flex">
       <div class="SocialMediaIcon"> <i class="fa fa-instagram" aria-hidden="true"></i></div>
-      <div class="color-white SocialMediaName"> Instagram </div>
+      <!--<div class="color-white SocialMediaName"> Instagram </div>-->
     </a>
     </li>
 
     <li>
       <a href="https://www.pinterest.com/" class="flex">
       <div class="SocialMediaIcon"> <i class="fa fa-pinterest" aria-hidden="true"></i></div>
-      <div class="color-white SocialMediaName"> Pinterest</div>
+      <!--<div class="color-white SocialMediaName"> Pinterest</div>-->
     </a>
     </li>
 
     <li>
       <a href="https://plus.google.com/" class="flex">
       <div class="SocialMediaIcon"> <i class="fa fa-google-plus" aria-hidden="true"></i></div>
-      <div class="color-white SocialMediaName "> Google+</div>
+      <!--<div class="color-white SocialMediaName "> Google+</div>-->
     </a>
     </li>
 
