--- a/index.html
+++ b/index.html
@@ -10,85 +10,193 @@
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i&amp;subset=cyrillic,latin-ext" rel="stylesheet"/>
   <script src="https://use.fontawesome.com/3d160053b9.js" rel="stylesheet"></script>
   <link type="text/css" rel="stylesheet" href="reset.css"/>
+
 <title> Aloha - Homepage</title>
 </head>
 
-
 <body>
+<header class="flex header-tablet header-desktop">
 
-<header class="flex">
- <img class="alohalogo" src="assets/images/aloha-logo.svg"/>
-<div class="flex flex-direction-column-reverse">
-   <ul class=" flex playfairdisplay justify-content-space-around text-align-center">
-    <li> Home </li>
-    <li> About </li>
-    <li> Contact </li>
-  </ul>
+ <div class=" alohalogo justify-content-space-between padding-xsmall
+align-items-center alohalogotablet alohalogodesktop">
+   <img src="assets/images/aloha-logo.svg"/>
+ </div>
 
-  <img class="shoppingcartlogo" src="assets/images/cart-icon.svg"/> </div>
+<div class="shoppingcartlogo flex padding-xsmall
+justify-content-flex-end shoppingcartlogotablet shoppingcartlogodesktop ">
+     <div id="cartTotalItems" class="text-align-center"> 0 </div>
+</div>
+
+
+
+<div class=" cta border-top ctatablet ctadesktop">
+   <ul class=" flex font-family-raleway justify-content-space-around
+   padding-top-bottom-xsmall">
+    <li class="redorangefont boldfont"> ABOUT </li>
+    <li class=" redorangefont boldfont"> SHOP </li>
+    <li class="redorangefont boldfont "> FEATURED </li>
+    <li class=" redorangefont boldfont"> UPDATES </li>
+</ul>
+</div>
+
 </header>
 
-<section class="banner text-align-center">
-  <h4 class="color-white font-family-raleway fontshadow fontsize-med"> NEW COLLECTION</h4>
-  <h1 class="color-white playfairdisplay fontshadow"> Spring/Summer 2016 </h1>
+<section class="banner flex align-items-center text-align-center flex-direction-column
+justify-content-center bannerdesktop">
+  <h4 class="color-white font-family-raleway fontshadow fontsize-med">
+     NEW COLLECTION</h4>
+  <h1 class="color-white playfairdisplay fontshadow "> Spring/Summer 2016 </h1>
 </section>
 
-<section class="companydescription text-align-center">
-  <h3 class="playfairdisplay boldfont">
+<section class="companydescription text-align-center padding-top-bottom-medium">
+  <h3 class="playfairdisplay boldfont padding-bottom-small">
     <span class="italics_playfairdisplay">Hand-Crafted</span> Styles</h3>
-  <p class="font-family-raleway fontsize-sm"> Aloha Apparel Co. sells only the
-    finest ready-to-travel clothing. Browse our </p>
-  <p class="font-family-raleway fontsize-sm">  current selection of products or
-    sign-up for updates below. </p>
+  <p class="font-family-raleway fontsize-sm display-inline display-block-desktop "greyfont"">
+    Aloha Apparel Co. sells only the
+    finest ready-to-travel clothing. </p>
+    <p class="font-family-raleway fontsize-sm display-inline display-block-desktop "greyfont"">
+      Browse our current  selection of products or
+      sign-up for updates below. </p>
 </section>
 
-<section class="products text-align-center">
-   <h3 class="playfairdisplay boldfont">
+<section class="color-white font-family-raleway boldfont align-items-center
+fontsize-sm">
+
+<div class="mentrendsglassestablet mentrendsglassesdesktop">
+      <div class="mens text-align-center padding-top-bottom-med menstablet mensdesktop"> MEN'S</div>
+
+  <div class=" flex text-align-center justify-content-space-between trendsglassestablet trendsglassesdesktop" >
+        <div class="trends padding-top-bottom-med trendstablet trendsdesktop"> TRENDS </div>
+        <div class="glasses padding-top-bottom-med glassestablet glassesdesktop">GLASSES</div>
+  </div>
+</div>
+
+<div class="salesbagswomentablet salesbagswomendesktop">
+  <div class="flex text-align-center justify-content-space-between salesbagstablet salesbagsdesktop">
+        <div class="sales padding-top-bottom-med salestablet salesdesktop"> SALE </div>
+        <div class="bags padding-top-bottom-med bagstablet bagsdesktop "> BAGS </div>
+  </div>
+
+        <div class="womens text-align-center padding-top-bottom-med womenstablet womensdesktop"> WOMEN'S</div>
+</div>
+</section>
+
+
+
+
+<section class="products text-align-center padding-top-bottom-medium">
+   <h3 class="playfairdisplay boldfont padding-bottom-med">
      <span class="italics_playfairdisplay">Most-Loved </span> Products </h3>
-  <div class="items font-family-raleway greyfont">
-      <ul>
-        <li><img src="assets/images/stretch-knit-dress.jpg"/> </li>
-        <li> DRESSES</li>
-        <li class="redorangefont playfairdisplay fontsize-med"> Stretch Knit Dress</li>
-        <li> $169.00</li>
-      </ul>
 
-      <ul>
-        <li><img src="assets/images/cotton-blue-shirt.jpg"/></li>
-        <li> SHIRTS </li>
-        <li class="redorangefont playfairdisplay fontsize-med"> Cotton Blue Shirt </li>
-        <li> $89.00 </li>
-      </ul>
+    <div class=" items bxslider justify-content-center font-family-raleway greyfont bxslider productsTablet
+    productsDesktop">
 
-      <ul>
-        <li><img src="assets/images/checked-stretch-dress.jpg"/></li>
-        <li>DRESSES </li>
-        <li class="redorangefont playfairdisplay fontsize-med"> Checked Stretch Dress </li>
-        <li> $129.00</li>
-      </ul>
+      <div>
+          <ul >
+            <li> <img  class="itemimage" src="assets/images/stretch-knit-dress.jpg"/> </li>
+            <li> DRESSES</li>
+            <li class="redorangefont playfairdisplay fontsize-med"> Stretch Knit Dress</li>
+            <li class="price"> $169.00</li>
+            <li> <button class="addtocart color-white font-family-raleway addtocart-button"
+              type="submit"> Add to Cart </button></li>
+            </ul>
+      </div>
 
+      <div>
+        <ul>
+          <li><img class="itemimage" src="assets/images/cotton-blue-shirt.jpg"/></li>
+          <li> SHIRTS </li>
+          <li class="redorangefont playfairdisplay fontsize-med"> Cotton Blue Shirt </li>
+          <li class="price"> $89.00 </li>
+          <li> <button class="addtocart color-white font-family-raleway addtocart-button"
+            type="submit"> Add to Cart </button></li>
+        </ul>
+      </div>
+
+      <div>
+        <ul>
+          <li><img class="itemimage" src="assets/images/checked-stretch-dress.jpg"/></li>
+          <li>DRESSES </li>
+          <li class="redorangefont playfairdisplay fontsize-med"> Checked Stretch Dress </li>
+          <li class="price"> $129.00</li>
+          <li> <button class="addtocart color-white font-family-raleway addtocart-button"
+            type="submit"> Add to Cart </button></li>
+        </ul>
+      </div>
+
+      <div>
+          <ul>
+            <li><img class="itemimage" src="assets/images/blue-hipster-backpack.jpg"/> </li>
+            <li>BAGS </li>
+            <li class="redorangefont playfairdisplay fontsize-med"> Blue Hipster Bag </li>
+            <li class="price"> $69.00</li>
+            <li> <button class="addtocart color-white font-family-raleway addtocart-button"
+              type="submit"> Add to Cart </button></li>
+          </ul>
+      </div>
+
+    <div>
       <ul>
-        <li><img src="assets/images/blue-hipster-backpack.jpg"/> </li>
-        <li>BAGS </li>
-        <li class="redorangefont playfairdisplay fontsize-med"> Blue Hipster Bag </li>
-        <li> $69.00</li>
-    </ul>
+        <li><img class="itemimage" src="assets/images/blue-silk-dress.jpg"/> </li>
+        <li>DRESSES</li>
+        <li class="redorangefont playfairdisplay fontsize-med"> Blue Silk Dress </li>
+        <li class="price"> $69.00</li>
+        <li> <button class="addtocart color-white font-family-raleway addtocart-button"
+          type="submit"> Add to Cart </button></li>
+      </ul>
+    </div>
+
+    <div>
+      <ul>
+        <li><img class="itemimage" src="assets/images/cotton-yellow-tshirt.jpg"/> </li>
+        <li>SHIRTS </li>
+        <li class="redorangefont playfairdisplay fontsize-med"> Cotton Yellow T-Shirt </li>
+        <li class="price"> $69.00</li>
+        <li> <button class="addtocart color-white font-family-raleway addtocart-button"
+          type="submit"> Add to Cart </button></li>
+        </ul>
+    </div>
+
+    <div>
+      <ul>
+        <li><img class="itemimage" src="assets/images/demin-overall-shorts.jpg"/> </li>
+        <li>DENIM</li>
+        <li class="redorangefont playfairdisplay fontsize-med"> Denim Overall Shorts </li>
+        <li class="price"> $89.00</li>
+        <li> <button class="addtocart color-white font-family-raleway addtocart-button"
+          type="submit"> Add to Cart </button></li>
+      </ul>
+    </div>
+
+    <div>
+      <ul>
+        <li><img class="itemimage" src="assets/images/pink-dotted-dress.jpg"/> </li>
+        <li>DRESSES</li>
+        <li class="redorangefont playfairdisplay fontsize-med"> Pink Dotted Dress </li>
+        <li class="price"> $99.00</li>
+        <li> <button class="addtocart color-white font-family-raleway addtocart-button"
+          type="submit"> Add to Cart </button></li>
+      </ul>
+    </div>
+
   </div>
 </section>
 
-<section class="email color-white text-align-center">
 
-  <div class="text-email-section text-align-center">
-    <h3 class=" playfairdisplay fontshadow boldfont">
+<section class="email color-white text-align-center padding-top-bottom-medium">
+
+  <div class="text-email-section padding-bottom-small">
+    <h3 class=" playfairdisplay padding-top-bottom-small fontshadow boldfont">
       <span class="italics_playfairdisplay"> Sign-Up for</span> Updates </h3>
-  <p class="font-family-raleway fontsize-sm"> Stay updated on our latest releases, be first
-    to find out about upcoming</p>
-  <p class="font-family-raleway fontsize-sm">  sales, and get free style tips from our blog.
+  <p class="font-family-raleway fontsize-sm display-inline display-block-desktop">
+    Stay updated on our latest product releases, be first to find out about </p>
+  <p class="font-family-raleway fontsize-sm display-inline display-block-desktop">
+    upcoming sales, and get free style tips from our blog.
     Unsubscribe at any time </p>
   </div>
 
-<div class="emailform text-align-center">
-  <form>
+<div class="emailform flex justify-content-center align-items-center ">
+  <form class="flex justify-content-center align-items-center " >
     <input class="font-family-raleway flex  " type="text" name="emailaddress" placeholder="Your Email"> </input>
     <button class="color-white font-family-raleway email-button" type="submit"> Subscribe </button>
   </form>
@@ -97,56 +205,65 @@
 
 
 
-<footer class="color-white text-align-center">
-<ul class="playfairdisplay" >
+<footer class="color-white text-align-center padding-top-bottom-medium footerTablet footerdekstop">
+<ul class="playfairdisplay companyContactTablet companyContactdesktop" >
     <li>&copy; 2016 Aloha Apparel Co.</li>
-    <li> Powered by HTML and CSS </li>
-    <li> 604-604-6040 <a class="color-white" href="sample.com"> info@alohaapparel.com </a> </li>
+    <li class="padding-bottom-small"> Powered by HTML and CSS </li>
+    <li class="padding-bottom-small"> 604-604-6040 <a class="color-white" href="sample.com"> info@alohaapparel.com </a> </li>
     <li class="greyfont">1490 W Broadway </li>
-    <li class="greyfont"> Vancouver, BC, Canada </li>
+    <li class="greyfont padding-bottom-small"> Vancouver, BC, Canada </li>
 </ul>
 
-  <ul class=" SocialMedia flex font-family-raleway text-align-center justify-content-center">
+<ul class= "SocialMedia flex font-family-raleway text-align-center justify-content-center
+  SocialMediaTablet SocialMediadesktop">
 
     <li>
-    <a href="https://www.facebook.com/" class="flex">
-      <div class="SocialMediaIcon"> <i class="fa fa-facebook" aria-hidden="true"></i></div>
-      <!--<div class="color-white SocialMediaName"> Facebook </div>-->
-    </a>
+      <a href="https://www.facebook.com/" class="flex">
+            <div class="SocialMediaIcon">
+            <i class="fa fa-facebook" aria-hidden="true"></i></div>
+      <div class="color-white SocialMediaName SocialMediaNamedesktop"> Facebook </div>
+      </a>
     </li>
-
 
     <li>
       <a href="https://twitter.com/" class="flex">
-      <div class="SocialMediaIcon"> <i class="fa fa-twitter-square" aria-hidden="true"></i></div>
-      <!--<div class="color-white SocialMediaName"> Twitter </div>-->
+            <div class="SocialMediaIcon">
+            <i class="fa fa-twitter-square" aria-hidden="true"></i></div>
+        <div class="color-white SocialMediaName SocialMediaNamedesktop "> Twitter </div>
       </a>
     </li>
 
     <li>
       <a href="https://www.instagram.com/?hl=en" class="flex">
-      <div class="SocialMediaIcon"> <i class="fa fa-instagram" aria-hidden="true"></i></div>
-      <!--<div class="color-white SocialMediaName"> Instagram </div>-->
-    </a>
+              <div class="SocialMediaIcon">
+              <i class="fa fa-instagram" aria-hidden="true"></i></div>
+        <div class="color-white SocialMediaName SocialMediaNamedesktop"> Instagram </div>
+      </a>
     </li>
 
     <li>
       <a href="https://www.pinterest.com/" class="flex">
-      <div class="SocialMediaIcon"> <i class="fa fa-pinterest" aria-hidden="true"></i></div>
-      <!--<div class="color-white SocialMediaName"> Pinterest</div>-->
-    </a>
+            <div class="SocialMediaIcon">
+            <i class="fa fa-pinterest" aria-hidden="true"></i></div>
+        <div class="color-white SocialMediaName SocialMediaNamedesktop"> Pinterest</div>
+      </a>
     </li>
 
     <li>
       <a href="https://plus.google.com/" class="flex">
-      <div class="SocialMediaIcon"> <i class="fa fa-google-plus" aria-hidden="true"></i></div>
-      <!--<div class="color-white SocialMediaName "> Google+</div>-->
-    </a>
+            <div class="SocialMediaIcon">
+            <i class="fa fa-google-plus" aria-hidden="true"></i></div>
+        <div class="color-white SocialMediaName SocialMediaNamedesktop"> Google+</div>
+      </a>
     </li>
 
-    </ul>
-
+  </ul>
 </footer>
 
 </body>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="jquery.bxslider.min.js"></script>
+<link href="jquery.bxslider.css" rel="stylesheet"/>
+<script type="text/javascript" src="script.js"> </script>
 </html>
