--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@ align-items-center alohalogotablet alohalogodesktop">
    <img src="assets/images/aloha-logo.svg"/>
  </div>
 
-<div class="shoppingcartlogo flex padding-xsmall
-justify-content-flex-end shoppingcartlogotablet shoppingcartlogodesktop ">
-     <div id="cartTotalItems" class="text-align-center"> 0 </div>
+<div class="shoppingcartlogo flex padding-small justify-content-flex-end
+shoppingcartlogotablet shoppingcartlogodesktop  ">
+     <div id="cartTotalItems" class="text-align-center font-family-raleway boldfont "> 0 </div>
 </div>
 
 
