added position back on header

--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@ justify-content-center bannerdesktop">
 
           <div class="emailform flex justify-content-center align-items-center ">
             <form class="flex justify-content-center align-items-center " >
-              <input class="font-family-raleway flex  " type="text" name="emailaddress" placeholder="Your Email"> </input>
-              <button class="color-white font-family-raleway email-button" type="submit"> Subscribe </button>
+              <input id="emailInput" type="email" name="emailaddress" class="font-family-raleway flex  "  placeholder="Your Email"> </input>
+              <button id="subscribe" type="submit" class="color-white font-family-raleway email-button" > Subscribe </button>
             </form>
           </div>
     </section>
