added padding lg to scss

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 
 
-
+<main>
 <!-- BANNER SECTION -->
 
 
@@ -51,7 +51,7 @@ justify-content-center bannerdesktop">
 <!-- ABOUT SECTION -->
 
 
-  <section id="about"class="companydescription text-align-center padding-top-bottom-medium">
+  <section id="about"class="companydescription padding-top-lg padding-bottom-lg text-align-center padding-top-bottom-medium">
       <h3 class="playfairdisplay boldfont padding-bottom-small">
         <span class="italics_playfairdisplay">Hand-Crafted</span> 
         Styles
@@ -215,6 +215,7 @@ justify-content-center bannerdesktop">
           </div>
     </section>
 
+  </main>
 
 
     <footer  class="color-white text-align-center padding-top-bottom-medium footerTablet footerdekstop">
