--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta charset="UTF-8">
+    <meta name="description" content="Aloha Shopping">
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+    <meta name="author" content="Mahreen Qureshi">
+    <!--[if lt IE 9]>
+     <script src="/js/html5shiv.js"></script>
+     <![endif]-->
+     <!-- FONTAWESOME -->
+
   <link type="text/css" rel="stylesheet" href="./build/css/main.css "/>
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i&amp;subset=cyrillic,latin-ext" rel="stylesheet"/>
