added alt tags to images

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <header class="flex header-tablet header-desktop">
     <div class=" alohalogo justify-content-space-between padding-xsmall
     align-items-center alohalogotablet alohalogodesktop">
-        <img src="./build/assets/aloha-logo.svg"/>
+        <img alt="Aloha logo" src="./build/assets/aloha-logo.svg"/>
     </div>
 
     <div class="shoppingcartlogo flex padding-small justify-content-flex-end shoppingcartlogotablet shoppingcartlogodesktop ">
@@ -113,7 +113,7 @@ justify-content-center bannerdesktop">
 
         <div>
             <ul >
-              <li> <img  class="itemimage" src="./build/assets/stretch-knit-dress.jpg"/> </li>
+              <li> <img alt="Stretch Knit Dress" class="itemimage" src="./build/assets/stretch-knit-dress.jpg"/> </li>
               <li> DRESSES</li>
               <li class="redorangefont playfairdisplay fontsize-med"> Stretch Knit Dress</li>
               <li class="price"> $169.00</li>
@@ -124,7 +124,7 @@ justify-content-center bannerdesktop">
 
         <div>
           <ul>
-            <li><img class="itemimage" src="./build/assets/cotton-blue-shirt.jpg"/></li>
+            <li><img alt="Cotton Blue Shirt" class="itemimage" src="./build/assets/cotton-blue-shirt.jpg"/></li>
             <li> SHIRTS </li>
             <li class="redorangefont playfairdisplay fontsize-med"> Cotton Blue Shirt </li>
             <li class="price"> $89.00 </li>
@@ -135,7 +135,7 @@ justify-content-center bannerdesktop">
 
         <div>
           <ul>
-            <li><img class="itemimage" src="./build/assets/checked-stretch-dress.jpg"/></li>
+            <li><img alt="Checked Stretch Dress" class="itemimage" src="./build/assets/checked-stretch-dress.jpg"/></li>
             <li>DRESSES </li>
             <li class="redorangefont playfairdisplay fontsize-med"> Checked Stretch Dress </li>
             <li class="price"> $129.00</li>
@@ -146,7 +146,7 @@ justify-content-center bannerdesktop">
 
         <div>
             <ul>
-              <li><img class="itemimage" src="./build/assets/blue-hipster-backpack.jpg"/> </li>
+              <li><img alt="Blue Hipster Backpack" class="itemimage" src="./build/assets/blue-hipster-backpack.jpg"/> </li>
               <li>BAGS </li>
               <li class="redorangefont playfairdisplay fontsize-med"> Blue Hipster Bag </li>
               <li class="price"> $69.00</li>
@@ -157,7 +157,7 @@ justify-content-center bannerdesktop">
 
       <div>
         <ul>
-          <li><img class="itemimage" src="./build/assets/blue-silk-dress.jpg"/> </li>
+          <li><img alt="Blue Silk Dress" class="itemimage" src="./build/assets/blue-silk-dress.jpg"/> </li>
           <li>DRESSES</li>
           <li class="redorangefont playfairdisplay fontsize-med"> Blue Silk Dress </li>
           <li class="price"> $69.00</li>
@@ -168,7 +168,7 @@ justify-content-center bannerdesktop">
 
       <div>
         <ul>
-          <li><img class="itemimage" src="./build/assets/cotton-yellow-tshirt.jpg"/> </li>
+          <li><img alt="Cotton Yellow T-Shirt" class="itemimage" src="./build/assets/cotton-yellow-tshirt.jpg"/> </li>
           <li>SHIRTS </li>
           <li class="redorangefont playfairdisplay fontsize-med"> Cotton Yellow T-Shirt </li>
           <li class="price"> $69.00</li>
@@ -179,7 +179,7 @@ justify-content-center bannerdesktop">
 
       <div>
         <ul>
-          <li><img class="itemimage" src="./build/assets/demin-overall-shorts.jpg"/> </li>
+          <li><img alt="Denim Overall Shorts" class="itemimage" src="./build/assets/demin-overall-shorts.jpg"/> </li>
           <li>DENIM</li>
           <li class="redorangefont playfairdisplay fontsize-med"> Denim Overall Shorts </li>
           <li class="price"> $89.00</li>
@@ -190,7 +190,7 @@ justify-content-center bannerdesktop">
 
       <div>
         <ul>
-          <li><img class="itemimage" src="./build/assets/pink-dotted-dress.jpg"/> </li>
+          <li><img alt="Pink Dotted Dress" class="itemimage" src="./build/assets/pink-dotted-dress.jpg"/> </li>
           <li>DRESSES</li>
           <li class="redorangefont playfairdisplay fontsize-med"> Pink Dotted Dress </li>
           <li class="price"> $99.00</li>
