added alt tags to images

--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
-<!DOCTYPE html>
 <html lang="en-US">
 
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-<meta charset="UTF-8">
-<meta name="description" content="Aloha Shoppinh">
-<meta name="keywords" content="HTML,CSS,XML,JavaScript">
-<meta name="author" content="Mahreen Qureshi">
-<!--[if lt IE 9]>
- <script src="/js/html5shiv.js"></script>
- <![endif]-->
- <!-- FONTAWESOME -->
-<script src="https://use.fontawesome.com/3d160053b9.js" rel="stylesheet"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta charset="UTF-8">
+    <meta name="description" content="Aloha Shopping">
+    <meta name="keywords" content="HTML,CSS,JavaScript,Shopping, Clothing, Aloha">
+    <meta name="author" content="Mahreen Qureshi">
+    <!--[if lt IE 9]>
+     <script src="/js/html5shiv.js"></script>
+     <![endif]-->
+     <!-- FONTAWESOME -->
   <link type="text/css" rel="stylesheet" href="./build/css/main.css "/>
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i&amp;subset=cyrillic,latin-ext" rel="stylesheet"/>
@@ -27,7 +25,7 @@
 <header class="flex header-tablet header-desktop">
     <div class=" alohalogo justify-content-space-between padding-xsmall
     align-items-center alohalogotablet alohalogodesktop">
-        <img alt="Aloha logo" src="./build/assets/aloha-logo.svg"/>
+        <img alt="Aloha Logo" src="./build/assets/aloha-logo.svg"/>
     </div>
 
     <div class="shoppingcartlogo flex padding-small justify-content-flex-end shoppingcartlogotablet shoppingcartlogodesktop ">
@@ -146,7 +144,7 @@ justify-content-center bannerdesktop">
 
         <div>
             <ul>
-              <li><img alt="Blue Hipster Backpack" class="itemimage" src="./build/assets/blue-hipster-backpack.jpg"/> </li>
+              <li><img class="itemimage" src="./build/assets/blue-hipster-backpack.jpg"/> </li>
               <li>BAGS </li>
               <li class="redorangefont playfairdisplay fontsize-med"> Blue Hipster Bag </li>
               <li class="price"> $69.00</li>
@@ -157,7 +155,7 @@ justify-content-center bannerdesktop">
 
       <div>
         <ul>
-          <li><img alt="Blue Silk Dress" class="itemimage" src="./build/assets/blue-silk-dress.jpg"/> </li>
+          <li><img alt="Blue Hipster Bag" class="itemimage" src="./build/assets/blue-silk-dress.jpg"/> </li>
           <li>DRESSES</li>
           <li class="redorangefont playfairdisplay fontsize-med"> Blue Silk Dress </li>
           <li class="price"> $69.00</li>
