--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- <!DOCTYPE html> -->
 <html lang="en-US">
 
 <head>
@@ -279,11 +280,11 @@ justify-content-center bannerdesktop">
           </li>
         </ul>
     </footer>
-
+    
 </body>
 
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="./build/js/jquery.bxslider.min.js"></script>
-<!-- <link href="jquery.bxslider.css" rel="stylesheet"/> -->
+<script type="text/javascript" src="./build/js/jquery.bxslider.min.js"></script>
 <script type="text/javascript" src="./build/js/bundle.js"> </script>
 </html>
